# pytest-agentcontract

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/: do-work.md
.claude/skills/steps/: build-refactor.md  explore-adapter.md  explore-ui.md
.github/workflows/: ci.yml
docs/: demo.cast
drafts/: distribution-comments.md  show-hn.md
examples/customer_support/: __init__.py  agent.py  test_support.py
examples/customer_support/scenarios/: refund-eligible.agentrun.json  refund-not-delivered.agentrun.json  refund-with-policies.agentrun.json
src/agentcontract/: __init__.py  cli.py  config.py  plugin.py  serialization.py  types.py
src/agentcontract/adapters/: __init__.py  langgraph.py  llamaindex.py  openai_agents.py
src/agentcontract/assertions/: __init__.py  engine.py
src/agentcontract/recorder/: __init__.py  core.py  interceptors.py
src/agentcontract/replay/: __init__.py  engine.py
tests/scenarios/: refund-eligible.agentrun.json  refund-not-delivered.agentrun.json  refund-with-policies.agentrun.json
tests/unit/: test_adapters.py  test_assertions.py  test_cli.py  test_config.py  test_interceptors.py  test_recorder.py  test_replay.py  test_serialization.py
